Spring boot with i18n

--- a/spring-boot-jpa-basics/README
+++ b/spring-boot-jpa-basics/README
@@ -28,3 +28,7 @@ HATEOAS Starter
 ----------------
 Full form: hyper media as the Engine of Application state
 Along with resource + some metadata(eg links)
+
+i18n
+----------
+By using Beans 1. LocaleResolver 2.ResourceMessageBundleSource
